--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,5 +27,5 @@ jobs:
             cd ${{ env.DEPLOY_DIR}} || { echo "ERROR: No se puede acceder a /var/www/crm-emp o /var/www/crm-emp-qa"; exit 1; }
             echo "Directorio actual: $(pwd)"
             ls -la
-            # git pull origin ${{ github.ref_name }}
+            git pull origin ${{ github.ref_name }}
             # sudo systemctl restart apache2
